[gd_scene load_steps=10 format=3 uid="uid://43ogg6a4f2o1"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_1v6ae"]
[ext_resource type="Texture2D" uid="uid://bt3u778rs7660" path="res://Assets/Temp/IMG_1114.jpg" id="1_htc10"]
[ext_resource type="Texture2D" uid="uid://dqlvql1kniohq" path="res://Assets/EMG_logo_pixel-0.25x.png" id="1_pn4fu"]
[ext_resource type="FontFile" uid="uid://8vrj02mpgm8t" path="res://VCR_OSD_MONO_1.001.ttf" id="2_i2nu6"]

[sub_resource type="Animation" id="Animation_0rj83"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_e03y4"]
resource_name = "fade_out_game_start"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_a2awn"]
resource_name = "fade_out_credits"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_i234v"]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeOut:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_558x8"]
_data = {
"RESET": SubResource("Animation_0rj83"),
"fade_in": SubResource("Animation_i234v"),
"fade_out_credits": SubResource("Animation_a2awn"),
"fade_out_game_start": SubResource("Animation_e03y4")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1v6ae")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_htc10")
expand_mode = 1

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 28.0
offset_right = 1199.0
offset_bottom = 535.0
texture = ExtResource("1_pn4fu")
expand_mode = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = 619.0
offset_right = 453.0
offset_bottom = 738.0
scale = Vector2(3.24, 3.24)

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.835294, 0.552941, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.462745, 0.0196078, 0.152941, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_i2nu6")
theme_override_font_sizes/font_size = 32
text = "Get Selling!"
flat = true

[node name="Credits" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.835294, 0.552941, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.462745, 0.0196078, 0.152941, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_i2nu6")
theme_override_font_sizes/font_size = 32
text = "Credits
"
flat = true

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996078, 0.835294, 0.552941, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.462745, 0.0196078, 0.152941, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_i2nu6")
theme_override_font_sizes/font_size = 32
text = "Quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_558x8")
}

[node name="FadeOut" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
